# OS-Multi-Science

./: .gitignore  PRD_OS_MULTI_SCIENCE.md  cli.py  pyproject.toml  requirements.txt
agents/: __init__.py  coordinator.py
benchmarks/: __init__.py  baselines.py  datasets.py  model_zoo.py  soa_benchmark.py  timing_benchmark.py
chats_raw/: 01_modelli_ai_su_pc.md
experiments/: q1_monotonicity.py  q2_conformal_bounds.py  q3_early_warning.py  q4_parsimony.py  q5_anti_spurious.py  q6_structural_invariants.py  q7_meta_learner.py  q8_tipping_detection.py
framework/: __init__.py  aesc_profiler.py  anti_spurious.py  catalog.py  config.py  crc_gating.py  early_warning.py  icm.py  meta_learner.py  router.py  types.py
knowledge/: __init__.py  graph.py
notebooks/: compute_icm_demo.py
orchestrator/: __init__.py  pipeline.py
paper/: generate_figures.py  icm_paper.tex  references.bib
reports/: benchmark_covid19.md  benchmark_epidemic.md  benchmark_financial.md  benchmark_financial_raw_output.txt  computational_complexity.md  mathematical_foundations.md  project_summary.md  q1_monotonicity_results.md  q2_conformal_bounds_raw_output.txt  q2_conformal_bounds_results.md  q3_early_warning_results.md  q4_parsimony_results.md  q5_anti_spurious_results.md  q6_structural_invariants_results.md  q7_meta_learner_results.md  q8_tipping_detection_results.md  soa_benchmark_results.md
tests/: __init__.py  test_agents.py  test_anti_spurious.py  test_baselines.py  test_covid19_benchmark.py  test_crc_gating.py  test_early_warning.py  test_icm.py  test_integration.py  test_meta_learner.py  (+10 more)
(+5 files in other folders)
