[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "os-multi-science"
version = "0.1.0"
description = "Epistemic Operating System for Cross-Disciplinary Scientific Discovery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Luka Stanisljevic"},
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
transport = [
    "POT>=0.9",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
network = [
    "networkx>=3.1",
]
ml = [
    "torch>=2.0",
    "xgboost>=2.0",
]
full = [
    "POT>=0.9",
    "networkx>=3.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "chromadb>=0.4",
    "ray>=2.7",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "streamlit>=1.28",
]

[project.scripts]
osms = "cli:main"

[tool.setuptools.packages.find]
include = ["framework*", "orchestrator*", "knowledge*", "agents*", "benchmarks*"]
